# INTERNATIONAL-CONFERENCE-ON-SUSTAINABILITY-AND-DIGITALIZATION

./: Anchor.toml
client/: client.ts
programs/global-decentralized-media-ownership/: Cargo.toml
programs/global-decentralized-media-ownership/src/: lib.rs
tests/: anchor.ts
